--- a/style.css
+++ b/style.css
@@ -1,29 +1,19 @@
-/* @font-face {
-    font-family: TW Cen MT;
-    src: "twcenmt.TTF";
-    font-stretch: ";
-
-} */
 body{    
     margin: 0px;
     padding: 0px;
-    background-image: image("cartoonized.png");
     background-color: #f3f3f3;
     font-family: 'TW Cen MT';
     font-stretch: condensed;
     font-weight: 800;
-    height: 500px;
+    /* background-image: url("grow.svg");
+    background-repeat: no-repeat;
+    background-attachment: fixed; */
 }
-.triangle{
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    margin:0px;
-    padding: 0px;
+header{
+    background-color: #555;
     width: 100vw;
-    z-index: 2;
-}
-div{
+    height:20vh;
+    border-radius: 0  0 50% 50%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,21 +21,12 @@ div{
 ul{
     display: flex;
     justify-content: center;
-    position: absolute;
-    top: 40px;
     list-style-type: none;
     margin:0px;
     padding: 0px;
     z-index: 3;
 }    
-/* ul{ display: flex;
-    align-items: center;
-    margin-top: -100px;
-    
-    z-index: 2;
-    background-color: blue;
-}
-*/
+
 ul li{
     margin: 10px;
     padding: 0px;
@@ -56,23 +37,94 @@ ul li{
     border-radius: 15px;
     height: 50px;
     line-height: 50px;
-    width: 200px;
+    width: 150px;
     margin:0px;
     padding: 0px;
     border: 1px solid black;
     background-color: black;
-    font-size: 30px;
+    font-stretch: normal;
+    font-weight: bold;
+    font-size: 25px;
     color: white;    
     text-align: center;
     text-decoration: none;
+    font-family: 'TW Cen MT';
   } 
-  /* .grow
-  { 
+
+.page1{  
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+  .cartoonized
+  { height: 80vh;
+ /* z-index: 4; 
+    top: 150px;
+    right: 30px;  */
+  }  
+.intro
+{   margin: 0px;
+    padding: 0px;  
+    /* position:absolute;
+   
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; */
+}
+
+
+/* #backg{   
+    position: static;  
+    widows: 1920px;
+    overflow:hidden;
+} 
+.triangle{
     position: absolute;
-    z-index: 1;
-    height: 
-    margin-left: 100px;
-  } */
+    display: flex;
+    justify-content: center;
+    margin:0px;
+    padding: 0px;
+    width: 100vw;
+    z-index: 0;
+}
+div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+ul{
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin:0px;
+    padding: 0px;
+    z-index: 3;
+}    
+
+ul li{
+    margin: 10px;
+    padding: 0px;
+    display: inline;
+} 
+.tab{
+    display: inline-block;
+    border-radius: 15px;
+    height: 50px;
+    line-height: 50px;
+    width: 150px;
+    margin:0px;
+    padding: 0px;
+    border: 1px solid black;
+    background-color: black;
+    font-stretch: normal;
+    font-weight: bold;
+    font-size: 25px;
+    color: white;    
+    text-align: center;
+    text-decoration: none;
+    font-family: 'TW Cen MT';
+  } 
   .cartoonized
   { width: 80vh;
     position: absolute;
@@ -89,9 +141,7 @@ ul li{
       flex-direction: column;
       align-items: flex-start;
   }
-  #Group_128{
 
-     
-      width: 100vw;
-      overflow:hidden;
-  }
+  #about{
+      position: relative;
+  } */
