--- a/style.css
+++ b/style.css
@@ -249,3 +249,78 @@ line{
 .spark img{
     height: 90vh;
 }
+
+
+
+
+
+
+
+.page5{
+    height: 100vh;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+.foot{
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+rect{
+    display: flex;
+    align-self: flex-end;
+    justify-self: center;
+    width: 100%;
+    height:15vh;
+    align-items: flex-end;
+    justify-content:center;
+    background-color: #555555;
+    margin-bottom: 20px;
+    border-radius:0 0 30px 30px;
+} 
+rect text{
+    font-size: 25px;
+    color: white; 
+    font-family:"Futura Bk BT";
+    font-weight: 100;
+    margin-bottom: 10px;
+}
+
+footer{
+    display: flex;
+    align-self:center;
+    justify-self: center;
+    height: 0%;
+    width: 0%;
+    border-left: 49vw solid transparent;
+    border-right: 49vw solid transparent;
+    border-bottom: 30vh solid #555555;
+    }
+
+.page5 line{
+    background-color:#FFA200;
+    width: 70vw;
+    height:5px;
+    align-self: center;
+}
+
+
+.ul{
+    display: flex;
+    justify-content: flex-end;
+}
+.page5 ul{
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    margin:0px;
+    padding: 0px;
+    z-index: 3;
+
+}    
+
+.page5 ul li{
+    margin: 10px;
+    padding: 0px;
+} 
