--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow:0px 0px 10px rgb(153, 153, 153);
 }
 ul{
     display: flex;
@@ -26,23 +27,24 @@ ul{
 }    
 
 ul li{
-    margin: 10px;
+    margin: 0.5vh;
     padding: 0px;
     display: inline;
+
 } 
 .tab{
     display: inline-block;
-    border-radius: 15px;
-    height: 50px;
-    line-height: 50px;
-    width: 150px;
+    border-radius: 5px;
+    height: 5vh;
+    line-height: 5vh;
+    width: 10vw;
     margin:0px;
     padding: 0px;
     border: 1px solid black;
     background-color: black;
     font-stretch: normal;
     font-weight: bold;
-    font-size: 25px;
+    font-size: 2.5vmin;
     color: white;    
     text-align: center;
     text-decoration: none;
@@ -50,21 +52,25 @@ ul li{
     align-self: centerZ;
   } 
 
-.page1{  
+.page1{ 
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
 }
   .cartoonized
-  { height: 80vh;
-    overflow: hidden;
+  { height: 80vmin;
+    
   }  
 
 .intro
 {   margin: 0px;
     padding: 0px;  
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
 }
+
 
 
 
