--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     font-weight: 800;
  
 }
+
 header{
     background-color: #555;
     width: 100%;
@@ -57,10 +58,10 @@ ul li{
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  height: 80vh;
 }
   .cartoonized
-  { height: 80vmin;
-    
+  { height: 80vmin;   
   }  
 
 .intro
@@ -69,6 +70,12 @@ ul li{
     display: flex;
     align-items: stretch;
     flex-direction: column;
+}
+@media screen and (orientation:portrait) {
+    .page1 {
+        flex-direction: column-reverse;
+        justify-self: stretch;        
+    }
 }
 
 
