--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ ul li{
     } 
     .abtlogo{
        
-        margin-top: -12vw;
+        margin-top: -6vh;
         margin-left: -33vw;
     }
     .abtlogo svg{
