--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ body{
     margin: 0px;
     padding: 0px;
     background-color: #f3f3f3;
-    font-family: 'TW Cen MT';
+    /* font-family: 'TW Cen MT'; */
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-stretch: condensed;
     font-weight: 800;
  
@@ -241,7 +242,7 @@ line{
        height: 150vh;
     }
     .page3 img{
-        height: 30vw;
+        height: 33vw;
         overflow: hidden;
     }
     .proheading Text{
@@ -259,7 +260,7 @@ line{
         align-self:center;    
     }
     .proorder div p{
-        width: 60vw;
+        width: 55vw;
         font-size: 2.5vw;
         font-weight: 400;
         font-family: 'Times New Roman', Times, serif;
@@ -269,7 +270,7 @@ line{
         font-weight: bold;
     }
     .splash img{
-        height:50vw;
+        height:55vw;
     }
 }
 
