--- a/style.css
+++ b/style.css
@@ -284,25 +284,45 @@ line{
     display: flex;
     justify-content: space-evenly;
 }
+.wkheading Text{
+    font-size: 5.5vw; 
+    font-family: "Geometr415 Blk BT";
+    margin-top: 1vh;
+}
 .apporder img{
-    height:80vh;
+    margin-top: 5vh;
+    height:70vmin;
     object-fit: contain;
+    margin-left: 2vw;
+    margin-right: 2vw;
 }
 .apporder{ 
-    margin-top: 70px;
-    height: 250vh;  
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+}
+.apporder text{
+    font-size: 8vh;
+    font-family: showcard gothic;
+    color:#0b4c9c;
+    -webkit-text-stroke: 2px black;
+    z-index: 3;
+    margin-left: 1vw;
+    margin-right: 1vw;
+}
+.apporder svg{ 
+    margin-top: -40vh;
+    height:10vh;
 }
 .apporder div{
     padding: 0px;
     margin: 0px;
     display: flex;
     flex-direction: row;
-    justify-content:space-between;
-    align-items: center;
+    justify-content: space-between;
+
 }
+
+
 .uiorder{
     height: 100vh;
 }
@@ -362,6 +382,30 @@ line{
 .spark img{
     height: 90vh;
 }
+@media screen and (orientation:portrait)
+{
+    .wkheading{
+        margin-top: 2.5vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .wkheading Text{
+        font-size: 8vw; 
+    }
+    .apporder svg{ 
+        margin-top: auto;
+    }
+    .apporder div{
+        align-items: center;
+    }
+    .apporder text{
+        font-size: 5vw;
+    }
+}
+
+
+
 
 
 
