--- a/style.css
+++ b/style.css
@@ -290,15 +290,17 @@ line{
     margin-top: 1vh;
 }
 .apporder img{
-    margin-top: 5vh;
-    height:70vmin;
+    height:70%;
     object-fit: contain;
-    margin-left: 2vw;
-    margin-right: 2vw;
+    
+    background-color: darkblue;
 }
 .apporder{ 
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    background-color: darkcyan;
+    justify-content: center;
 }
 .apporder text{
     font-size: 8vh;
@@ -308,10 +310,16 @@ line{
     z-index: 3;
     margin-left: 1vw;
     margin-right: 1vw;
+    /* text-shadow:
+    3px 3px 0 #000,
+  -1px -1px 0 #000,  
+   1px -1px 0 #000,
+   -1px 1px 0 #000,
+    1px 1px 0 #000; */
 }
 .apporder svg{ 
-    margin-top: -40vh;
-    height:10vh;
+    width: 15vw;
+
 }
 .apporder div{
     padding: 0px;
@@ -319,49 +327,81 @@ line{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
 }
 
 
 .uiorder{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     height: 100vh;
+    overflow:hidden;
+    background-color: plum;
 }
 .uiorder img{
-    height: 80vh;
-
-}
-.uiorder svg{
-    margin-left: 100px;
-}
-.webd{
     height: 100vh;
-    display: flex; 
-    align-items: stretch;
-    justify-content: space-around;
-
+    object-fit: cover;
+    margin-left: -15vw;
 }
-.webd img{
-    height: 100vh;
-    margin-left: 50px;
+.uiorder text{
+    font-size: 4vmax; 
+    font-family: showcard gothic; 
+    color:#fff;
+    z-index: 1;
+    
 }
-.webd div{
-    position: absolute;
-    right:10%;
-    margin-top: 15%;
-    z-index: 3;
+.uiorder div{
+    margin-left: 8vw; 
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 
 }
+.uiorder svg{
+    height: 15vmax;
+    margin-left: -20vmax;
+}
+
+.webd{
+    height: 100vh;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    /* align-items: stretch;
+    justify-content: space-around; */
+    background-color: slateblue;
+
+}
+.webd img{
+    /* height: 45vw; */
+    height: 80vh;
+    object-fit: contain;
+    background-color: turquoise;
+}
+.webd div{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #555;
+    margin-top: 20vw;
+
+}
 .webd div p{
-    font-size: 40px; 
+    font-size: 2.5vw; 
     font-family: showcard gothic; 
-    color:#007140;
-    text-align: center; 
+    color:#007140; 
     text-shadow: 1px 1px 1px black;
-    line-height: 50px;
-    margin-bottom: 5px;
+    line-height: 3vw;
+    margin-bottom:4vw;
+}
+.webd div p text{
+    font-size: 8vw; 
+    color: #180D50
+}
+.webd svg{
+    
+    align-self: center;
+    background-color: #FFA200;
 }
 .pcbd{
     height: 100vh;
@@ -393,16 +433,30 @@ line{
     .wkheading Text{
         font-size: 8vw; 
     }
-    .apporder svg{ 
-        margin-top: auto;
-    }
-    .apporder div{
-        align-items: center;
-    }
     .apporder text{
-        font-size: 5vw;
+        font-size: 8vw;
     }
+    .apporder img{
+        height: 80vw;  
+    }
+    .uiorder{
+        flex-direction: column;
+        justify-content: center;
+        
+    }
+    .uiorder img{
+        height: 100vw;
+        overflow-x: hidden;
+        transform: rotate(90deg);
+        margin-left:unset;  
+    }
+    .uiorder div{
+        margin-left:9vw;
+        align-self: center;
+    }
+
 }
+
 
 
 
