--- a/style.css
+++ b/style.css
@@ -161,7 +161,6 @@ ul li{
         font-size: 3.5vw;
     } 
     .abtlogo{
-       
         margin-top: -6vh;
         margin-left: -33vw;
     }
@@ -533,8 +532,8 @@ rect{
     display: flex;
     align-self: flex-end;
     justify-self: center;
-    width: 100%;
-    height:15vh;
+    width: 100vw;
+    height:15vmin;
     align-items: flex-end;
     justify-content:center;
     background-color: #555555;
@@ -571,7 +570,6 @@ footer{
 .ul{
     display: flex;
     justify-content: space-between;
-    margin-bottom: -30vh;
 
 }
 .page5 ul{
@@ -579,7 +577,6 @@ footer{
     flex-direction: column;
     list-style-type: none;
     padding: 0px;
-    z-index: 3;
 }    
 
 .page5 ul li{
@@ -587,28 +584,52 @@ footer{
     padding: 0px;
 } 
 .conlogo{
-    width: 600px;
+    margin-left: 5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .conlogo text{
-    position: relative;
-    top: 370px;
-    left: 115px;
-    
+    font-size: 4.3vw;
+    font-family: "Geometr415 Blk BT";
 }
 .conlogo svg{
-    margin-bottom: 150px;
+    margin: 0px;
     padding: 0px;
-    width: 580px;
+    width: 30vw;
+    margin-top: -4vw;
+    margin-left: -21vw;
+    z-index: -1;
 } 
 .conicon{
     position: relative;
-    top: -68vh;
+    top: -35vw;
     left:38vw;
-    height: 370px;
-    width: 370px;
+    height: 37vw;
+    width: 37vw;
+    background-color: cornflowerblue;
 }
 .conicon img{
     height: 45px;
 
 }
-
+@media screen and (orientation:portrait)
+{
+    .page5{
+        height: 80vh;
+    }
+    footer{
+        border-bottom: 10vh solid #555555;
+    }
+    .conlogo svg{
+        width: 60vw;
+        margin-top: -6vw;
+        margin-left: -42vw;
+    }
+    .conlogo text{
+        font-size: 8.6vw;
+    }
+    .conlogo{
+        margin-left: 6vw;
+    }
+}
