--- a/style.css
+++ b/style.css
@@ -518,6 +518,7 @@ height: 40vmin;
 
 
 .page5{
+    /* background-color: cornflowerblue; */
     height: 100vh;
     display: flex;
     justify-content: flex-end;
@@ -554,6 +555,7 @@ footer{
     justify-self: center;
     height: 0%;
     width: 0%;
+    /* margin-bottom:60px; */
     border-left: 49.4vw solid transparent;
     border-right: 49.4vw solid transparent;
     border-bottom: 30vh solid #555555;
@@ -570,7 +572,8 @@ footer{
 .ul{
     display: flex;
     justify-content: space-between;
-
+    /* background-color: blue; */
+    margin-bottom: -20vh;
 }
 .page5 ul{
     display: flex;
@@ -602,24 +605,27 @@ footer{
     z-index: -1;
 } 
 .conicon{
-    position: relative;
+    /* position: relative;
     top: -35vw;
-    left:38vw;
-    height: 37vw;
-    width: 37vw;
-    background-color: cornflowerblue;
+    left:38vw; */
+    display: flex;
+    justify-content: space-evenly;
+    height: 100px;
+    width: 100vw;
+    align-items: center;
+    background-color:  #ffa200;
 }
 .conicon img{
-    height: 45px;
+    height: 60px;
 
 }
 @media screen and (orientation:portrait)
 {
     .page5{
-        height: 80vh;
+        /* height: 80vh; */
     }
     footer{
-        border-bottom: 10vh solid #555555;
+        border-bottom: 15vh solid #555555;
     }
     .conlogo svg{
         width: 60vw;
@@ -632,4 +638,8 @@ footer{
     .conlogo{
         margin-left: 6vw;
     }
+    .ul{
+        margin-bottom: 15vh;
+    }
 }
+
