--- a/style.css
+++ b/style.css
@@ -50,8 +50,9 @@ ul li{
     color: white;    
     text-align: center;
     text-decoration: none;
-    font-family: 'TW Cen MT';
-    align-self: centerZ;
+    /* font-family: 'TW Cen MT'; */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    align-self: center;
   } 
 
 .page1{ 
@@ -129,10 +130,14 @@ ul li{
 .abtlogo text{
     position: relative;
     margin-top: 2vw;
-    left: 25vw;;
+    left: 24.5vw;;
     z-index: 1;
-    font-size: 4.3vw; 
-    font-family: "Geometr415 Blk BT";
+    font-size: 4vw; 
+    font-weight: 900;
+    /* font-family: "Geometr415 Blk BT"; */
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-stretch: normal;
 }
 .about p{
     width: 50vw;
@@ -170,7 +175,7 @@ ul li{
     .abtlogo text{
         position: relative;
         margin-top: 4vw;
-        left: 50vw;;
+        left: 52vw;;
         z-index: 1;
         font-size: 8.6vw;
     }
@@ -187,7 +192,11 @@ ul li{
 }
 .proheading Text{
     font-size: 5.5vw; 
-    font-family: "Geometr415 Blk BT";
+    /* font-family: "Geometr415 Blk BT"; */
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-stretch: normal;
+    font-weight: 900;
     margin-top: 1vh;
 }
 line{
@@ -200,6 +209,7 @@ line{
 .page3 div{
     display: flex;
     justify-content: space-evenly;
+
 }
 .page3 img{
     height: 20vw;
@@ -217,9 +227,9 @@ line{
 }
 .proorder div p Text{
     font-size: 2vw;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
     font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
+    font-stretch: semi-condensed;
     font-stretch: normal;
 }
 .proorder{
@@ -285,7 +295,10 @@ line{
 }
 .wkheading Text{
     font-size: 5.5vw; 
-    font-family: "Geometr415 Blk BT";
+    /* font-family: "Geometr415 Blk BT"; */
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-stretch: normal;
     margin-top: 1vh;
 }
 .apporder img{
@@ -302,19 +315,19 @@ line{
     justify-content: center;
 }
 .apporder text{
-    font-size: 8vh;
-    font-family: showcard gothic;
+    font-size: 5vw;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color:#0b4c9c;
     -webkit-text-stroke: 2px black;
     z-index: 3;
     margin-left: 1vw;
     margin-right: 1vw;
-    /* text-shadow:
+    text-shadow:
     3px 3px 0 #000,
   -1px -1px 0 #000,  
    1px -1px 0 #000,
    -1px 1px 0 #000,
-    1px 1px 0 #000; */
+    1px 1px 0 #000;
 }
 .apporder svg{ 
     width: 15vw;
@@ -344,7 +357,7 @@ line{
 }
 .uiorder text{
     font-size: 4vmax; 
-    font-family: showcard gothic; 
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
     color:#fff;
     z-index: 1;
     
@@ -390,12 +403,12 @@ line{
 .webd div text{
     font-size: 7vw; 
     color: #180D50;
-    font-family: showcard gothic;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-shadow: 1px 1px 1px black;
 }
 .webd div p{
     font-size: 2vw; 
-    font-family: showcard gothic; 
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; 
     color:#007140; 
     text-shadow: 1px 1px 1px black;
     margin-top:-1vw;
@@ -544,7 +557,7 @@ rect{
 rect text{
     font-size: 25px;
     color: white; 
-    font-family:"Futura Bk BT";
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 100;
     margin-bottom: 10px;
 }
@@ -593,8 +606,9 @@ footer{
     align-items: center;
 }
 .conlogo text{
-    font-size: 4.3vw;
-    font-family: "Geometr415 Blk BT";
+    font-size: 4vw;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-stretch: normal;
 }
 .conlogo svg{
     margin: 0px;
@@ -630,7 +644,7 @@ footer{
     .conlogo svg{
         width: 60vw;
         margin-top: -6vw;
-        margin-left: -42vw;
+        margin-left: -44vw;
     }
     .conlogo text{
         font-size: 8.6vw;
